RESOLVED FIXED 112333
[Qt][WK1] REGRESSION(r145784): Blend tests are failing
https://bugs.webkit.org/show_bug.cgi?id=112333
Summary [Qt][WK1] REGRESSION(r145784): Blend tests are failing
Zoltan Arvai
Reported 2013-03-14 02:20:38 PDT
Tests failing after r145784 on Qt WK1, but pass on WK2: http://build.webkit.sed.hu/results/x86-64%20Linux%20Qt%20Release/r145785%20%2849137%29/results.html css3/compositing/background-blend-mode-property-parsing.html css3/compositing/background-blend-mode-property.html css3/compositing/blend-mode-property-parsing.html css3/compositing/blend-mode-property.html css3/compositing/should-have-compositing-layer.html transitions/blendmode-transitions.html --- /ramdisk/qt-linux-64-release/build/layout-test-results/css3/compositing/background-blend-mode-property-parsing-expected.txt +++ /ramdisk/qt-linux-64-release/build/layout-test-results/css3/compositing/background-blend-mode-property-parsing-actual.txt @@ -6,131 +6,131 @@ Basic reference : normal PASS cssRule.type is 1 -PASS declaration.length is 1 -PASS declaration.getPropertyValue('-webkit-background-blend-mode') is 'normal' -PASS jsWrapperClass(blendModeRule) is 'CSSPrimitiveValue' -PASS jsWrapperClass(blendModeRule.__proto__) is 'CSSPrimitiveValuePrototype' -PASS jsWrapperClass(blendModeRule.constructor) is 'CSSPrimitiveValueConstructor' +FAIL declaration.length should be 1. Was 0. +FAIL declaration.getPropertyValue('-webkit-background-blend-mode') should be normal (of type string). Was null (of type object). +FAIL jsWrapperClass(blendModeRule) should be CSSPrimitiveValue. Was [null]. +FAIL jsWrapperClass(blendModeRule.__proto__) should be CSSPrimitiveValuePrototype. Threw exception TypeError: 'null' is not an object (evaluating 'blendModeRule.__proto__') +FAIL jsWrapperClass(blendModeRule.constructor) should be CSSPrimitiveValueConstructor. Threw exception TypeError: 'null' is not an object (evaluating 'blendModeRule.constructor') Basic reference : multiply, screen PASS cssRule.type is 1 -PASS declaration.length is 1 -PASS declaration.getPropertyValue('-webkit-background-blend-mode') is 'multiply, screen' -PASS jsWrapperClass(blendModeRule) is 'CSSValueList' -PASS jsWrapperClass(blendModeRule.__proto__) is 'CSSValueListPrototype' -PASS jsWrapperClass(blendModeRule.constructor) is 'CSSValueListConstructor' +FAIL declaration.length should be 1. Was 0. +FAIL declaration.getPropertyValue('-webkit-background-blend-mode') should be multiply, screen (of type string). Was null (of type object). +FAIL jsWrapperClass(blendModeRule) should be CSSValueList. Was [null]. +FAIL jsWrapperClass(blendModeRule.__proto__) should be CSSValueListPrototype. Threw exception TypeError: 'null' is not an object (evaluating 'blendModeRule.__proto__') +FAIL jsWrapperClass(blendModeRule.constructor) should be CSSValueListConstructor. Threw exception TypeError: 'null' is not an object (evaluating 'blendModeRule.constructor') Basic reference : screen, hue PASS cssRule.type is 1 -PASS declaration.length is 1 -PASS declaration.getPropertyValue('-webkit-background-blend-mode') is 'screen, hue' -PASS jsWrapperClass(blendModeRule) is 'CSSValueList' -PASS jsWrapperClass(blendModeRule.__proto__) is 'CSSValueListPrototype' -PASS jsWrapperClass(blendModeRule.constructor) is 'CSSValueListConstructor' +FAIL declaration.length should be 1. Was 0. +FAIL declaration.getPropertyValue('-webkit-background-blend-mode') should be screen, hue (of type string). Was null (of type object). +FAIL jsWrapperClass(blendModeRule) should be CSSValueList. Was [null]. +FAIL jsWrapperClass(blendModeRule.__proto__) should be CSSValueListPrototype. Threw exception TypeError: 'null' is not an object (evaluating 'blendModeRule.__proto__') +FAIL jsWrapperClass(blendModeRule.constructor) should be CSSValueListConstructor. Threw exception TypeError: 'null' is not an object (evaluating 'blendModeRule.constructor') Basic reference : overlay, normal PASS cssRule.type is 1 -PASS declaration.length is 1 -PASS declaration.getPropertyValue('-webkit-background-blend-mode') is 'overlay, normal' -PASS jsWrapperClass(blendModeRule) is 'CSSValueList' -PASS jsWrapperClass(blendModeRule.__proto__) is 'CSSValueListPrototype' -PASS jsWrapperClass(blendModeRule.constructor) is 'CSSValueListConstructor' +FAIL declaration.length should be 1. Was 0. +FAIL declaration.getPropertyValue('-webkit-background-blend-mode') should be overlay, normal (of type string). Was null (of type object). +FAIL jsWrapperClass(blendModeRule) should be CSSValueList. Was [null]. +FAIL jsWrapperClass(blendModeRule.__proto__) should be CSSValueListPrototype. Threw exception TypeError: 'null' is not an object (evaluating 'blendModeRule.__proto__') +FAIL jsWrapperClass(blendModeRule.constructor) should be CSSValueListConstructor. Threw exception TypeError: 'null' is not an object (evaluating 'blendModeRule.constructor') Basic reference : darken, lighten, normal, luminosity PASS cssRule.type is 1 -PASS declaration.length is 1 -PASS declaration.getPropertyValue('-webkit-background-blend-mode') is 'darken, lighten, normal, luminosity' -PASS jsWrapperClass(blendModeRule) is 'CSSValueList' -PASS jsWrapperClass(blendModeRule.__proto__) is 'CSSValueListPrototype' -PASS jsWrapperClass(blendModeRule.constructor) is 'CSSValueListConstructor' +FAIL declaration.length should be 1. Was 0. +FAIL declaration.getPropertyValue('-webkit-background-blend-mode') should be darken, lighten, normal, luminosity (of type string). Was null (of type object). +FAIL jsWrapperClass(blendModeRule) should be CSSValueList. Was [null]. +FAIL jsWrapperClass(blendModeRule.__proto__) should be CSSValueListPrototype. Threw exception TypeError: 'null' is not an object (evaluating 'blendModeRule.__proto__') +FAIL jsWrapperClass(blendModeRule.constructor) should be CSSValueListConstructor. Threw exception TypeError: 'null' is not an object (evaluating 'blendModeRule.constructor') Basic reference : lighten PASS cssRule.type is 1 -PASS declaration.length is 1 -PASS declaration.getPropertyValue('-webkit-background-blend-mode') is 'lighten' -PASS jsWrapperClass(blendModeRule) is 'CSSPrimitiveValue' -PASS jsWrapperClass(blendModeRule.__proto__) is 'CSSPrimitiveValuePrototype' -PASS jsWrapperClass(blendModeRule.constructor) is 'CSSPrimitiveValueConstructor' +FAIL declaration.length should be 1. Was 0. +FAIL declaration.getPropertyValue('-webkit-background-blend-mode') should be lighten (of type string). Was null (of type object). +FAIL jsWrapperClass(blendModeRule) should be CSSPrimitiveValue. Was [null]. +FAIL jsWrapperClass(blendModeRule.__proto__) should be CSSPrimitiveValuePrototype. Threw exception TypeError: 'null' is not an object (evaluating 'blendModeRule.__proto__') +FAIL jsWrapperClass(blendModeRule.constructor) should be CSSPrimitiveValueConstructor. Threw exception TypeError: 'null' is not an object (evaluating 'blendModeRule.constructor') Basic reference : color-dodge PASS cssRule.type is 1 -PASS declaration.length is 1 -PASS declaration.getPropertyValue('-webkit-background-blend-mode') is 'color-dodge' -PASS jsWrapperClass(blendModeRule) is 'CSSPrimitiveValue' -PASS jsWrapperClass(blendModeRule.__proto__) is 'CSSPrimitiveValuePrototype' -PASS jsWrapperClass(blendModeRule.constructor) is 'CSSPrimitiveValueConstructor' +FAIL declaration.length should be 1. Was 0. +FAIL declaration.getPropertyValue('-webkit-background-blend-mode') should be color-dodge (of type string). Was null (of type object). +FAIL jsWrapperClass(blendModeRule) should be CSSPrimitiveValue. Was [null]. +FAIL jsWrapperClass(blendModeRule.__proto__) should be CSSPrimitiveValuePrototype. Threw exception TypeError: 'null' is not an object (evaluating 'blendModeRule.__proto__') +FAIL jsWrapperClass(blendModeRule.constructor) should be CSSPrimitiveValueConstructor. Threw exception TypeError: 'null' is not an object (evaluating 'blendModeRule.constructor') Basic reference : color-burn PASS cssRule.type is 1 -PASS declaration.length is 1 -PASS declaration.getPropertyValue('-webkit-background-blend-mode') is 'color-burn' -PASS jsWrapperClass(blendModeRule) is 'CSSPrimitiveValue' -PASS jsWrapperClass(blendModeRule.__proto__) is 'CSSPrimitiveValuePrototype' -PASS jsWrapperClass(blendModeRule.constructor) is 'CSSPrimitiveValueConstructor' +FAIL declaration.length should be 1. Was 0. +FAIL declaration.getPropertyValue('-webkit-background-blend-mode') should be color-burn (of type string). Was null (of type object). +FAIL jsWrapperClass(blendModeRule) should be CSSPrimitiveValue. Was [null]. +FAIL jsWrapperClass(blendModeRule.__proto__) should be CSSPrimitiveValuePrototype. Threw exception TypeError: 'null' is not an object (evaluating 'blendModeRule.__proto__') +FAIL jsWrapperClass(blendModeRule.constructor) should be CSSPrimitiveValueConstructor. Threw exception TypeError: 'null' is not an object (evaluating 'blendModeRule.constructor') Basic reference : hard-light PASS cssRule.type is 1 -PASS declaration.length is 1 -PASS declaration.getPropertyValue('-webkit-background-blend-mode') is 'hard-light' -PASS jsWrapperClass(blendModeRule) is 'CSSPrimitiveValue' -PASS jsWrapperClass(blendModeRule.__proto__) is 'CSSPrimitiveValuePrototype' -PASS jsWrapperClass(blendModeRule.constructor) is 'CSSPrimitiveValueConstructor' +FAIL declaration.length should be 1. Was 0. +FAIL declaration.getPropertyValue('-webkit-background-blend-mode') should be hard-light (of type string). Was null (of type object). +FAIL jsWrapperClass(blendModeRule) should be CSSPrimitiveValue. Was [null]. +FAIL jsWrapperClass(blendModeRule.__proto__) should be CSSPrimitiveValuePrototype. Threw exception TypeError: 'null' is not an object (evaluating 'blendModeRule.__proto__') +FAIL jsWrapperClass(blendModeRule.constructor) should be CSSPrimitiveValueConstructor. Threw exception TypeError: 'null' is not an object (evaluating 'blendModeRule.constructor') Basic reference : soft-light PASS cssRule.type is 1 -PASS declaration.length is 1 -PASS declaration.getPropertyValue('-webkit-background-blend-mode') is 'soft-light' -PASS jsWrapperClass(blendModeRule) is 'CSSPrimitiveValue' -PASS jsWrapperClass(blendModeRule.__proto__) is 'CSSPrimitiveValuePrototype' -PASS jsWrapperClass(blendModeRule.constructor) is 'CSSPrimitiveValueConstructor' +FAIL declaration.length should be 1. Was 0. +FAIL declaration.getPropertyValue('-webkit-background-blend-mode') should be soft-light (of type string). Was null (of type object). +FAIL jsWrapperClass(blendModeRule) should be CSSPrimitiveValue. Was [null]. +FAIL jsWrapperClass(blendModeRule.__proto__) should be CSSPrimitiveValuePrototype. Threw exception TypeError: 'null' is not an object (evaluating 'blendModeRule.__proto__') +FAIL jsWrapperClass(blendModeRule.constructor) should be CSSPrimitiveValueConstructor. Threw exception TypeError: 'null' is not an object (evaluating 'blendModeRule.constructor') Basic reference : difference PASS cssRule.type is 1 -PASS declaration.length is 1 -PASS declaration.getPropertyValue('-webkit-background-blend-mode') is 'difference' -PASS jsWrapperClass(blendModeRule) is 'CSSPrimitiveValue' -PASS jsWrapperClass(blendModeRule.__proto__) is 'CSSPrimitiveValuePrototype' -PASS jsWrapperClass(blendModeRule.constructor) is 'CSSPrimitiveValueConstructor' +FAIL declaration.length should be 1. Was 0. +FAIL declaration.getPropertyValue('-webkit-background-blend-mode') should be difference (of type string). Was null (of type object). +FAIL jsWrapperClass(blendModeRule) should be CSSPrimitiveValue. Was [null]. +FAIL jsWrapperClass(blendModeRule.__proto__) should be CSSPrimitiveValuePrototype. Threw exception TypeError: 'null' is not an object (evaluating 'blendModeRule.__proto__') +FAIL jsWrapperClass(blendModeRule.constructor) should be CSSPrimitiveValueConstructor. Threw exception TypeError: 'null' is not an object (evaluating 'blendModeRule.constructor') Basic reference : exclusion PASS cssRule.type is 1 -PASS declaration.length is 1 -PASS declaration.getPropertyValue('-webkit-background-blend-mode') is 'exclusion' -PASS jsWrapperClass(blendModeRule) is 'CSSPrimitiveValue' -PASS jsWrapperClass(blendModeRule.__proto__) is 'CSSPrimitiveValuePrototype' -PASS jsWrapperClass(blendModeRule.constructor) is 'CSSPrimitiveValueConstructor' +FAIL declaration.length should be 1. Was 0. +FAIL declaration.getPropertyValue('-webkit-background-blend-mode') should be exclusion (of type string). Was null (of type object). +FAIL jsWrapperClass(blendModeRule) should be CSSPrimitiveValue. Was [null]. +FAIL jsWrapperClass(blendModeRule.__proto__) should be CSSPrimitiveValuePrototype. Threw exception TypeError: 'null' is not an object (evaluating 'blendModeRule.__proto__') +FAIL jsWrapperClass(blendModeRule.constructor) should be CSSPrimitiveValueConstructor. Threw exception TypeError: 'null' is not an object (evaluating 'blendModeRule.constructor') Basic reference : hue PASS cssRule.type is 1 -PASS declaration.length is 1 -PASS declaration.getPropertyValue('-webkit-background-blend-mode') is 'hue' -PASS jsWrapperClass(blendModeRule) is 'CSSPrimitiveValue' -PASS jsWrapperClass(blendModeRule.__proto__) is 'CSSPrimitiveValuePrototype' -PASS jsWrapperClass(blendModeRule.constructor) is 'CSSPrimitiveValueConstructor' +FAIL declaration.length should be 1. Was 0. +FAIL declaration.getPropertyValue('-webkit-background-blend-mode') should be hue (of type string). Was null (of type object). +FAIL jsWrapperClass(blendModeRule) should be CSSPrimitiveValue. Was [null]. +FAIL jsWrapperClass(blendModeRule.__proto__) should be CSSPrimitiveValuePrototype. Threw exception TypeError: 'null' is not an object (evaluating 'blendModeRule.__proto__') +FAIL jsWrapperClass(blendModeRule.constructor) should be CSSPrimitiveValueConstructor. Threw exception TypeError: 'null' is not an object (evaluating 'blendModeRule.constructor') Basic reference : saturation PASS cssRule.type is 1 -PASS declaration.length is 1 -PASS declaration.getPropertyValue('-webkit-background-blend-mode') is 'saturation' -PASS jsWrapperClass(blendModeRule) is 'CSSPrimitiveValue' -PASS jsWrapperClass(blendModeRule.__proto__) is 'CSSPrimitiveValuePrototype' -PASS jsWrapperClass(blendModeRule.constructor) is 'CSSPrimitiveValueConstructor' +FAIL declaration.length should be 1. Was 0. +FAIL declaration.getPropertyValue('-webkit-background-blend-mode') should be saturation (of type string). Was null (of type object). +FAIL jsWrapperClass(blendModeRule) should be CSSPrimitiveValue. Was [null]. +FAIL jsWrapperClass(blendModeRule.__proto__) should be CSSPrimitiveValuePrototype. Threw exception TypeError: 'null' is not an object (evaluating 'blendModeRule.__proto__') +FAIL jsWrapperClass(blendModeRule.constructor) should be CSSPrimitiveValueConstructor. Threw exception TypeError: 'null' is not an object (evaluating 'blendModeRule.constructor') Basic reference : color PASS cssRule.type is 1 -PASS declaration.length is 1 -PASS declaration.getPropertyValue('-webkit-background-blend-mode') is 'color' -PASS jsWrapperClass(blendModeRule) is 'CSSPrimitiveValue' -PASS jsWrapperClass(blendModeRule.__proto__) is 'CSSPrimitiveValuePrototype' -PASS jsWrapperClass(blendModeRule.constructor) is 'CSSPrimitiveValueConstructor' +FAIL declaration.length should be 1. Was 0. +FAIL declaration.getPropertyValue('-webkit-background-blend-mode') should be color (of type string). Was null (of type object). +FAIL jsWrapperClass(blendModeRule) should be CSSPrimitiveValue. Was [null]. +FAIL jsWrapperClass(blendModeRule.__proto__) should be CSSPrimitiveValuePrototype. Threw exception TypeError: 'null' is not an object (evaluating 'blendModeRule.__proto__') +FAIL jsWrapperClass(blendModeRule.constructor) should be CSSPrimitiveValueConstructor. Threw exception TypeError: 'null' is not an object (evaluating 'blendModeRule.constructor') Basic reference : luminosity PASS cssRule.type is 1 -PASS declaration.length is 1 -PASS declaration.getPropertyValue('-webkit-background-blend-mode') is 'luminosity' -PASS jsWrapperClass(blendModeRule) is 'CSSPrimitiveValue' -PASS jsWrapperClass(blendModeRule.__proto__) is 'CSSPrimitiveValuePrototype' -PASS jsWrapperClass(blendModeRule.constructor) is 'CSSPrimitiveValueConstructor' +FAIL declaration.length should be 1. Was 0. +FAIL declaration.getPropertyValue('-webkit-background-blend-mode') should be luminosity (of type string). Was null (of type object). +FAIL jsWrapperClass(blendModeRule) should be CSSPrimitiveValue. Was [null]. +FAIL jsWrapperClass(blendModeRule.__proto__) should be CSSPrimitiveValuePrototype. Threw exception TypeError: 'null' is not an object (evaluating 'blendModeRule.__proto__') +FAIL jsWrapperClass(blendModeRule.constructor) should be CSSPrimitiveValueConstructor. Threw exception TypeError: 'null' is not an object (evaluating 'blendModeRule.constructor') PASS successfullyParsed is true TEST COMPLETE
Attachments
Patch (2.65 KB, patch)
2013-03-14 09:47 PDT, Rik Cabanier
no flags
Zoltan Arvai
Comment 1 2013-03-14 02:56:11 PDT
Rik Cabanier
Comment 2 2013-03-14 09:47:18 PDT
Rik Cabanier
Comment 3 2013-03-14 09:48:01 PDT
Comment on attachment 193141 [details] Patch I can't build QT on my machine so I'm unable to verify that this will work
WebKit Review Bot
Comment 4 2013-03-14 09:50:43 PDT
Attachment 193141 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/qt/Api/qwebsettings.cpp', u'Source/WebKit/qt/Api/qwebsettings.h', u'Source/WebKit/qt/ChangeLog']" exit_code: 1 Source/WebKit/qt/Api/qwebsettings.cpp:184: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Review Bot
Comment 5 2013-03-14 11:54:50 PDT
Comment on attachment 193141 [details] Patch Clearing flags on attachment: 193141 Committed r145833: <http://trac.webkit.org/changeset/145833>
WebKit Review Bot
Comment 6 2013-03-14 11:54:53 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.