[Qt][WK1] REGRESSION(r145784): Blend tests are failing https://bugs.webkit.org/show_bug.cgi?id=112333

Patch by Rik Cabanier <cabanier@adobe.com> on 2013-03-14
Reviewed by Ryosuke Niwa.

Added code to passed compositing prefence to WebCore.

* Api/qwebsettings.cpp:
(QWebSettingsPrivate::apply):
(QWebSettings::QWebSettings):
* Api/qwebsettings.h:

Canonical link: https://commits.webkit.org/130676@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145833 268f45cc-cd09-0410-ab3c-d52691b4dbfc